fix(button): text vertical align with icon

--- a/src/common.module/button/button.styl
+++ b/src/common.module/button/button.styl
@@ -37,6 +37,10 @@ $nz-button-height ?= nz-local-grid-size(9)
   transition: background-color $nz-button-transition-duration,
               box-shadow $nz-button-transition-duration
 
+  .nz-icon + :not(.nz-icon)
+    position: relative
+    top: 1px
+
 
 // themes + variants
 .nz-button:not([disabled]), .nz-fab:not([disabled])
